changes size of homepage picture. fixes alignment... sort of

--- a/style.css
+++ b/style.css
@@ -38,12 +38,23 @@
     float: left;
     margin-left: 50px;
   }
+
+  .left-nav li:nth-child(1) {
+    float: left;
+    margin-left: 0;
+  }
+
 .right-nav {
   float: right;
 }
   .right-nav li {
     float: right;
     margin-left: 50px;
+ }
+
+   .right-nav li:nth-child(3) {
+    float: right;
+    margin-left: 0;
   }
 
 .title {
@@ -52,9 +63,9 @@
   font-size: 60px;
   text-align: center;
   margin: 0 auto;
-  width: 300px;
+  width: 390px;
   position: relative;
-  right: 43px;
+  /*right: 80px;*/
   top: 50px;
 
 }
@@ -71,7 +82,7 @@
   position: fixed;
   top: 166px;
   width: 100%;
-  height: 650px;
+  height: 590px;
   /*background-image: url("bugatti-homepage-copy.png");*/
   z-index: 1;
 
@@ -80,18 +91,18 @@
 .content {
   z-index: 2;
   position: relative;
-  top: 800px;
+  top: 740px;
   height: 900px;
   background-color: white;
   width: 100%;
 }
 
 .slogan-panel {
-  margin-right: 100px;
+  /*margin-right: 150px;*/
 }
 .slogan {
   /*position: fixed;*/
-  padding-top: 80px;
+  padding-top: 40px;
   /*margin-top: 80px;*/
   text-align: center;
   letter-spacing: 3px;
@@ -99,11 +110,11 @@
 }
 
 .contact {
-  margin-right: 100px;
+  /*margin-right: 150px;*/
 }
 
 .separator {
-    margin-top: -150px;
+    margin-top: -110px;
     font-weight: 100;
     font-size: 200px;
 }
@@ -113,6 +124,37 @@
   text-align: center;
   margin-bottom: 20px;
 }
+
+
+.review {
+  margin-left: 5px;
+  float: left;
+  width: 430px;
+}
+
+  .review p {
+    text-align: justify;
+    text-align: middle;
+    line-height: 150%;
+    font-size: 20px;
+  }
+
+    .reviews div:nth-child(1) {
+    position: relative;
+    padding-left: 0;
+  }
+
+  .reviews div:nth-child(2) {
+    float: right;
+    /*margin-right: 100px;*/
+  }
+
+  .review .author {
+    position: relative;
+    left: 180px;
+  }
+
+
 
 
 /* HELPER CLASSES */
